--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
     </div>
   </div>
 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Today</h5>
+        
+        <p id="cardToday"></p>
+      
+      </div>
+    </div>
+
 
 
     <script
